--- a/index.html
+++ b/index.html
@@ -4,10 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/CSS_Reset_JC.css">
+    <link rel="stylesheet" href="/styles.css">
     <script src="javascript.js" defer></script>
 </head>
 <body>
-    
+    <div class="left-side">
+        <img src="images/maxx-2VOiOcSq8sY-unsplash.jpg" width="300px">
+        <div class="photo-credit">Photo by <a href="https://unsplash.com/@maxzzerzz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">maxx ❄</a> on <a href="https://unsplash.com/photos/a-view-of-the-water-from-a-plane-2VOiOcSq8sY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></div>
+    </div>
+    <div class="right-side">
+        <p>This is not a real online service! It is a project I created to practice my skills with HTML, CSS, and Javascript. More specifically, forms!</p>
+        <form>
+            <h1>Create your account below!</h1>
+            <div class="form-inputs">
+                <div class="form-column1">
+                    <div class="input-pair">
+                        <label for="fname">First Name<span aria-label="required">*</span></label>
+                        <input type="text" id="fname" name="first_name" required>
+                    </div>
+                    <div class="input-pair">
+                        <label for="email">Email<span aria-label="required">*</span></label>
+                        <input type="email" id="email" name="email" required>
+                    </div>
+                    <div class="input-pair">
+                        <label for="pass">Password<span aria-label="required">*</span></label>
+                        <input type="password" id="pass" name="password" required>
+                    </div>
+                </div>
+                <div class="form-column2">
+                    <div class="input-pair">
+                        <label for="lname">Last Name<span aria-label="required">*</span></label>
+                        <input type="text" id="lname" name="fast_name" required>
+                    </div>
+                    <div class="input-pair">
+                        <label for="phone">Phone Number</label>
+                        <input type="tel" id="phone" name="phone">
+                    </div>
+                    <div class="input-pair">
+                        <label for="cpass">Confirm Password<span aria-label="required">*</span></label>
+                        <input type="password" id="cpass" required>
+                    </div>
+                </div>
+            </div>
+            <button type="submit">Create Account</button>
+            <p>Already have an account? <a href="">Log in</a></p>
+        </form>
+    </div>
 </body>
 </html>
