update flex layout and element spacing

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="content-left">
-        <img src="images/maxx-2VOiOcSq8sY-unsplash.jpg" width="300px">
+        <img src="images/maxx-2VOiOcSq8sY-unsplash.jpg">
         <div class="photo-credit">Photo by <a href="https://unsplash.com/@maxzzerzz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">maxx ❄</a> on <a href="https://unsplash.com/photos/a-view-of-the-water-from-a-plane-2VOiOcSq8sY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></div>
     </div>
     <div class="content-right">
@@ -51,7 +51,7 @@
                 </div>
             </div>
             <button type="submit">Create Account</button>
-            <p>Already have an account? <a href="">Log in</a></p>
+            <p class="log-in">Already have an account? <a href="">Log in</a></p>
         </form>
     </div>
 </body>
