--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <div class="content-left">
         <img src="images/maxx-2VOiOcSq8sY-unsplash.jpg">
+        <div class="logo-body">
+            
+        </div>
         <div class="photo-credit">Photo by <a href="https://unsplash.com/@maxzzerzz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">maxx ❄</a> on <a href="https://unsplash.com/photos/a-view-of-the-water-from-a-plane-2VOiOcSq8sY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></div>
     </div>
     <div class="content-right">
