place and style logo and logo text

--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 </head>
 <body>
     <div class="content-left">
-        <img src="images/maxx-2VOiOcSq8sY-unsplash.jpg">
-        <div class="logo-body">
-            
+        <img class="background-img" src="images/maxx-2VOiOcSq8sY-unsplash.jpg">
+        <div class="logo-container">
+            <div class="logo-pair">
+                <img class="logo-img" src="/images/ac_unit_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg">
+                <p class="logo-text">ICY</p>
+            </div>
         </div>
         <div class="photo-credit">Photo by <a href="https://unsplash.com/@maxzzerzz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">maxx ❄</a> on <a href="https://unsplash.com/photos/a-view-of-the-water-from-a-plane-2VOiOcSq8sY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></div>
     </div>
