Update html code layout to ~80 char lines

--- a/index.html
+++ b/index.html
@@ -13,14 +13,22 @@
         <img class="background-img" src="images/maxx-2VOiOcSq8sY-unsplash.jpg">
         <div class="logo-container">
             <div class="logo-pair">
-                <img class="logo-img" src="/images/ac_unit_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg">
+                <img class="logo-img" 
+                src="/images/ac_unit_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg">
                 <p class="logo-text">ICY</p>
             </div>
         </div>
-        <div class="photo-credit">Photo by <a href="https://unsplash.com/@maxzzerzz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">maxx ❄</a> on <a href="https://unsplash.com/photos/a-view-of-the-water-from-a-plane-2VOiOcSq8sY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></div>
+        <div class="photo-credit">Photo by 
+            <a href="https://unsplash.com/@maxzzerzz?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+            maxx ❄</a> on 
+            <a href="https://unsplash.com/photos/a-view-of-the-water-from-a-plane-2VOiOcSq8sY?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">
+            Unsplash</a>
+        </div>
     </div>
     <div class="content-right">
-        <p class="intro">This is not a real online service! It is a project I created to practice my skills with HTML, CSS, and Javascript. More specifically, forms!</p>
+        <p class="intro">This is not a real online service! It is a project I 
+            created to practice my skills with HTML, CSS, and Javascript. More 
+            specifically, forms!</p>
         <p class="intro">Let's do this!</p>
         <form>
             <div class="form-card">
@@ -29,16 +37,30 @@
                 <div class="form-inputs">
                     <div class="form-column1">
                         <div class="input-pair">
-                            <label for="fname">First Name<span aria-label="required">*</span></label>
-                            <input type="text" id="fname" name="first_name" required>
+                            <label for="fname">
+                                First Name<span aria-label="required">*</span>
+                            </label>
+                            <input type="text" 
+                                   id="fname" 
+                                   name="first_name" 
+                                   required>
                         </div>
                         <div class="input-pair">
-                            <label for="email">Email<span aria-label="required">*</span></label>
-                            <input type="email" id="email" name="email" required>
+                            <label for="email">
+                                Email<span aria-label="required">*</span>
+                            </label>
+                            <input type="email" 
+                                   id="email" 
+                                   name="email" 
+                                   required>
                         </div>
                         <div class="input-pair">
-                            <label for="pass">Password<span aria-label="required">*</span></label>
-                            <label class="pass-req" for="pass">Minimum of 8 characters, 1 letter, and 1 number</label>
+                            <label for="pass">Password
+                            <span aria-label="required">*</span>
+                            </label>
+                            <label class="pass-req" for="pass">
+                                Minimum of 8 characters, 1 letter, and 1 number
+                            </label>
                             <input type="password" 
                                    id="pass" 
                                    name="password" 
@@ -48,8 +70,13 @@
                     </div>
                     <div class="form-column2">
                         <div class="input-pair">
-                            <label for="lname">Last Name<span aria-label="required">*</span></label>
-                            <input type="text" id="lname" name="fast_name" required>
+                            <label for="lname">
+                                Last Name<span aria-label="required">*</span>
+                            </label>
+                            <input type="text" 
+                                   id="lname" 
+                                   name="fast_name" 
+                                   required>
                         </div>
                         <div class="input-pair">
                             <label for="phone">Phone Number</label>
@@ -59,8 +86,12 @@
                                    pattern="([1-9]{1}[0-9]{9}|[1-9]{1}[0-9]{11})">
                         </div>
                         <div class="input-pair">
-                            <label for="cpass">Confirm Password<span aria-label="required">*</span></label>
-                            <label class="pass-req" for="pass">Passwords must match</label>
+                            <label for="cpass">
+                                Confirm Password<span aria-label="required">*</span>
+                            </label>
+                            <label class="pass-req" for="cpass">
+                                Passwords must match
+                            </label>
                             <input type="password" 
                                    id="cpass" 
                                    required
