update html line length and fix typo

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                                    required>
                         </div>
                         <div class="input-pair">
-                            <label for="pass">Password
-                            <span aria-label="required">*</span>
+                            <label for="pass">
+                                Password<span aria-label="required">*</span>
                             </label>
                             <label class="pass-req" for="pass">
                                 Minimum of 8 characters, 1 letter, and 1 number
@@ -75,7 +75,7 @@
                             </label>
                             <input type="text" 
                                    id="lname" 
-                                   name="fast_name" 
+                                   name="last_name" 
                                    required>
                         </div>
                         <div class="input-pair">
