--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/odin-form-project/CSS_Reset_JC.css">
-    <link rel="stylesheet" href="/odin-form-project/styles.css">
+    <link rel="stylesheet" href="../CSS_Reset_JC.css">
+    <link rel="stylesheet" href="../styles.css">
     <script src="javascript.js" defer></script>
 </head>
 <body>
@@ -14,7 +14,7 @@
         <div class="logo-container">
             <div class="logo-pair">
                 <img class="logo-img" 
-                src="/images/ac_unit_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg">
+                src="images/ac_unit_24dp_E8EAED_FILL0_wght400_GRAD0_opsz24.svg">
                 <p class="logo-text">ICY</p>
             </div>
         </div>
